--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@fontsource/fira-mono": "^4.2.2",
     "@lukeed/uuid": "^2.0.0",
+    "@sveltejs/adapter-node": "^1.0.0-next.39",
     "cookie": "^0.4.1"
   }
 }
